Text::FileTree 0.1, <unreleased>

 * Initial release

-- Olof Johansson <olof@cpan.org>