@@ -15,29 +15,29 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 a1f0bce74aef2204401e4bef99f85d600ca8800a .gitignore
-SHA1 2b85ad75a6792a51f9f9d2dbc0f6c9a68d058acf Changes
+SHA1 4f4a6113fbeff6a7ed799fa839c792bca6aa68cb Changes
 SHA1 8e5655408fa68300a1c2b3872b3b442f8385adde MANIFEST
 SHA1 86056af0a8522c31c2f34652f03149d0fd712c19 MANIFEST.SKIP
-SHA1 f639cdfc30021f10c719878c6caa543b093fc426 META.yml
-SHA1 31075106f8f0da65a0c50ed4d0b43f146c8d1743 MYMETA.yml
+SHA1 24a524f6118ea6235fcbdda938bf6bafc06381a1 META.yml
+SHA1 26f0664f240a5a517f6dcd8f888de8e817dc9c95 MYMETA.yml
 SHA1 81084c315adef13bb898e1ca1097ebe97c91e64f Makefile.PL
 SHA1 c8067ffc48c3747977d6d1f9c1a96fee9d7f606b README
 SHA1 7dc4be1b2eef234d4ae245bc20406ed254ac1d95 bin/find2tree.pl
-SHA1 3c00c67def5b72f68ad925f36fbe79a5665aba5d lib/Text/FileTree.pm
+SHA1 9bd8081127785b955d040553bc5362a2a6e68424 lib/Text/FileTree.pm
 SHA1 0041aa9cc5249bb8409f513223ee3b68bbe3a164 t/01-distribution.t
-SHA1 eda3e414edc5470213f942570f4af27754f93d7a t/02-normal.t
+SHA1 86795f27235fac6085ab0a7abdbcc2907c191035 t/02-normal.t
 SHA1 cca799bf6870215cbc17d11e25a29bf47a27458f t/02-windows.t
 SHA1 397baa208d47e7af0cee5b63e5881759369c8949 t/data/reference
 SHA1 246eadb8c2d059bd889a2f09ffb1adfdd2b57347 t/data/windows
-SHA1 f20d923a5d72c6eb7913b16831da6202a2c3e749 t/lib/Test/Text/FileTree.pm
+SHA1 5726a07ea066d8a1c99c0359dc6e4bf489e07ced t/lib/Test/Text/FileTree.pm
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (GNU/Linux)
 
-iQEcBAEBAgAGBQJQXdITAAoJEPoSOGhqL2inF10IALXdUTqyXEiY8n0HfBrW+Ulb
-61T1SUA9pYVrJO40Ye9FvuJTU6XVwRF+BbmWZStgcPnNUE73mHSx8kdsnOYxN5rX
-Xn/WsbYh7I1/6z1+rKDNc/RAYOrM4HVwQZGz6cHd3rpkLc4zQxuIVgJz0V3krGqk
-XTO0/BmGw3EAbL51zXGYPd8ERigbP4i8GmD9TLuwUXv1HFyOD3sgMcXXC406YqkB
-01TP2w/xLFda5ATnF5mydGStx1u4/NlvjvBXmNn88eNIg+TkADXBN/drbTdloEf6
-SKj3b83/a7/L++10SuxTVIFwJ5uYTZLh3XZVV0nHthN7rW540OodU5EiRjebkOs=
-=SPYE
+iQEcBAEBAgAGBQJQaezOAAoJEPoSOGhqL2in/sIH/2VO76xqhVNbaANqfDKQJhb3
+/igsTYDlQsePyEV9L0Yc2z5ReNA7/IAiwCB0/M/61I4Ee9DO7YOuP7yX6yLg432X
+Ba99Gy+h8bh4KKIV7AJjpGVpvHWc5+j8zpBefYf9RFX5o/F0aLkxmDg1/lHB4BFK
+Wp1b1kZJEKQ+oJ9wcYxWN6p3xnRrsgkSjsfIMA0h+PmCz3Ug6tjCZtBfXFf70ms4
+iBFRevhTwIAkGT4ZMm4k+9rzq7ebtRd1C2QDtTOlbVs8cvhbURrFDlvay2M0fTyV
+6Kux/HjYRnzPkYrf4YkpllVj50ktecyUlCKrI+prIjZTmaxKhOrtxPMUafyDGVg=
+=GLZ+
 -----END PGP SIGNATURE-----
